# Capacity-planner

./: .gitignore  Dockerfile  Makefile  README capacity planner.md  README.md  modeling_assumptions.md  pyproject.toml
config/: constraints.yaml
data/: demand_forecast.csv
outputs/: constraint_diagnostics.csv  optimal_plan.csv  pareto_curve.csv  run_summary.json  scenario_comparison.csv  scenario_summary.csv  sensitivity_report.csv
src/capacity_planner/: __init__.py  app.py  config.py  data.py  linked_inputs.py  optimize.py  pipeline.py  scenario.py
tests/: test_pipeline.py
